src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B014_B014.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    DuplicateHandlerException:
      - OSError
  location:
    row: 17
    column: 8
  end_location:
    row: 17
    column: 24
  fix:
    patch:
      content: "OSError,"
      location:
        row: 17
        column: 8
      end_location:
        row: 17
        column: 24
- kind:
    DuplicateHandlerException:
      - MyError
  location:
    row: 28
    column: 8
  end_location:
    row: 28
    column: 24
  fix:
    patch:
      content: "MyError,"
      location:
        row: 28
        column: 8
      end_location:
        row: 28
        column: 24
- kind:
    DuplicateHandlerException:
      - re.error
  location:
    row: 49
    column: 8
  end_location:
    row: 49
    column: 26
  fix:
    patch:
      content: "re.error,"
      location:
        row: 49
        column: 8
      end_location:
        row: 49
        column: 26

