src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B016_B016.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind: CannotRaiseLiteral
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 11
  fix: ~
  parent: ~
- kind: CannotRaiseLiteral
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 7
  fix: ~
  parent: ~
- kind: CannotRaiseLiteral
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 14
  fix: ~
  parent: ~

