src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B020_B020.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    LoopVariableOverridesIterator: items
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 9
  fix: ~
  parent: ~
- kind:
    LoopVariableOverridesIterator: values
  location:
    row: 21
    column: 9
  end_location:
    row: 21
    column: 15
  fix: ~
  parent: ~
- kind:
    LoopVariableOverridesIterator: vars
  location:
    row: 36
    column: 4
  end_location:
    row: 36
    column: 8
  fix: ~
  parent: ~

