src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B022_B022.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    UselessContextlibSuppress: ~
  location:
    row: 9
    column: 5
  end_location:
    row: 9
    column: 26
  fix: ~
  parent: ~
- kind:
    UselessContextlibSuppress: ~
  location:
    row: 12
    column: 5
  end_location:
    row: 12
    column: 15
  fix: ~
  parent: ~

